Moved company stuff into company directory

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
-	<h1><a href="shop/index.php">Shop</a></h1>
-	<h1><a href="company/index.html">Employee database</a></h1>
+	<h1>Company</h1>
+	<ul>
+		<li><h3><a href="company/shop/index.php">Shop</a></h3></li>
+		<li><h3><a href="company/employees/index.html">Employee database</a></h3></li>
+	</ul>
 </body>
