Added salary box to employee creation form

--- a/html/company/employees/newemployee.html
+++ b/html/company/employees/newemployee.html
@@ -23,6 +23,9 @@
 			<tr>
 			<td>Password:</td><td><input type="password" id="password"/></td>
 			</tr>
+			<tr>
+			<td>Salary:</td><td><input type="text" id="salary"/></td>
+			</tr>
 		</table>
 
 		<br />
