Added page to view all employee records

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
 	<h1>Company</h1>
 	<ul>
 		<li><h3><a href="company/shop/index.php">Shop</a></h3></li>
-		<li><h3><a href="company/employees/index.html">Employee database</a></h3></li>
+		<li><h3><a href="company/employees/index.html">Employee login</a></h3></li>
+		<li><h3><a href="company/employees/records/index.php">Employee records</a></h3></li>
 	</ul>
 </body>
