Changed record view to employee login page

--- a/html/company/employees/index.html
+++ b/html/company/employees/index.html
@@ -9,7 +9,7 @@
 
 	<a href="/index.html">Home</a>
 
-	<h1>View employee records</h1>
+	<h1>Employee login</h1>
 
 	<form name="loginForm">
 		<table>
@@ -22,8 +22,7 @@
 		</table>
 
 		<br />
-		<input type="button" onclick="getEmployee()" value="View record"/>
-		<a href="newemployee.html">Add new employee</a>
+		<input type="button" onclick="getEmployee()" value="Log in"/>
 	</form>
 
 	<br />
