--- a/html/company/employees/newemployee.html
+++ b/html/company/employees/newemployee.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="scripts.js"></script>
 
 	<a href="/index.html">Home</a>
-	<a href="index.html">Employee records</a>
+	<a href="records/index.php">Employee records</a>
 
 	<h1>Add a new employee</h1>
 
