--- a/html/company/employees/index.html
+++ b/html/company/employees/index.html
@@ -3,10 +3,10 @@
 <head>
 	<title>Company Records</title>
 	<link rel="stylesheet" type="text/css" href="/styles.css">
+	<script type="text/javascript" src="/jquery/jquery-2.2.3.min.js"></script>
+	<script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
-	<script type="text/javascript" src="scripts.js"></script>
-
 	<a href="/index.html">Home</a>
 
 	<h1>Employee login</h1>
