--- a/html/company/employees/newemployee.html
+++ b/html/company/employees/newemployee.html
@@ -3,10 +3,10 @@
 <head>
 	<title>New user</title>
 	<link rel="stylesheet" type="text/css" href="/styles.css">
+	<script type="text/javascript" src="/jquery/jquery-2.2.3.min.js"></script>
+	<script type="text/javascript" src="scripts.js"></script>
 </head>
 <body>
-	<script type="text/javascript" src="scripts.js"></script>
-
 	<a href="/index.html">Home</a>
 	<a href="records/index.php">Employee records</a>
 
