New home page and CSS

--- a/html/index.html
+++ b/html/index.html
@@ -2,13 +2,18 @@
 <html>
 <head>
 	<title>Home</title>
-	<link rel="stylesheet" type="text/css" href="/styles.css">
+	<link rel="stylesheet" type="text/css" href="/css/home.css">
 </head>
-<body>
-	<h1>Company</h1>
-	<ul>
-		<li><h3><a href="company/shop/index.php">Shop</a></h3></li>
-		<li><h3><a href="company/employees/index.html">Employee login</a></h3></li>
-		<li><h3><a href="company/employees/records/index.php">Employee records</a></h3></li>
-	</ul>
+<body class="home-body">
+	<table align="center" cellpadding="10" cellspacing="20">
+		<tr>
+		<td><a href="company/index.html">Company Home</a></td>
+		</tr>
+		<tr>
+		<td><a href="adminer/adminer.php">Adminer</a></td>
+		</tr>
+		<tr>
+		<td><a href="https://github.com/zed2808/zachstevens.us">GitHub</a></td>
+		</tr>
+	</table>
 </body>
