--- a/html/company/employees/index.html
+++ b/html/company/employees/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>Company Records</title>
-	<link rel="stylesheet" type="text/css" href="/styles.css">
+	<link rel="stylesheet" type="text/css" href="/css/styles.css">
 	<script type="text/javascript" src="/jquery/jquery-2.2.3.min.js"></script>
 	<script type="text/javascript" src="/js/scripts.js"></script>
 </head>
 <body>
-	<a href="/index.html">Home</a>
+	<a href="/company/index.html">Home</a>
 
 	<h1>Employee login</h1>
 
