--- a/html/company/employees/newemployee.html
+++ b/html/company/employees/newemployee.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<title>New user</title>
-	<link rel="stylesheet" type="text/css" href="/styles.css">
+	<link rel="stylesheet" type="text/css" href="/css/styles.css">
 	<script type="text/javascript" src="/jquery/jquery-2.2.3.min.js"></script>
 	<script type="text/javascript" src="/js/scripts.js"></script>
 </head>
 <body>
-	<a href="/index.html">Home</a>
+	<a href="/company/index.html">Home</a>
 	<a href="records/index.php">Employee records</a>
 
 	<h1>Add a new employee</h1>
