created new dark theme

--- a/html/company/employees/index.html
+++ b/html/company/employees/index.html
@@ -7,7 +7,7 @@
 	<script type="text/javascript" src="/js/scripts.js"></script>
 </head>
 <body>
-	<a href="/company/index.html">Home</a>
+	<a class="topLink" href="/company/index.html">Home</a>
 
 	<h1>Employee login</h1>
 
