--- a/html/company/index.html
+++ b/html/company/index.html
@@ -4,11 +4,17 @@
 	<title>Company Home</title>
 	<link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
-<body>
+<body class="homeBody">
 	<h1>Company Home</h1>
-	<ul>
-		<li><h3><a href="shop/index.php">Shop</a></h3></li>
-		<li><h3><a href="employees/index.html">Employee login</a></h3></li>
-		<li><h3><a href="employees/records/index.php">Employee records</a></h3></li>
-	</ul>
+	<table align="center" cellpadding="10" cellspacing="20">
+		<tr>
+		<td class="tdLink"><a href="shop/index.php">Shop</a></td>
+		</tr>
+		<tr>
+		<td class="tdLink"><a href="employees/index.html">Employee login</a></td>
+		</tr>
+		<tr>
+		<td class="tdLink"><a href="employees/records/index.php">Employee records</a></td>
+		</tr>
+	</table>
 </body>
