--- a/html/company/employees/newemployee.html
+++ b/html/company/employees/newemployee.html
@@ -7,8 +7,8 @@
 	<script type="text/javascript" src="/js/scripts.js"></script>
 </head>
 <body>
-	<a href="/company/index.html">Home</a>
-	<a href="records/index.php">Employee records</a>
+	<a class="topLink" href="/company/index.html">Home</a>
+	<a class="topLink" href="records/index.php">Employee records</a>
 
 	<h1>Add a new employee</h1>
 
