--- a/html/index.html
+++ b/html/index.html
@@ -2,18 +2,18 @@
 <html>
 <head>
 	<title>Home</title>
-	<link rel="stylesheet" type="text/css" href="/css/home.css">
+	<link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
-<body class="home-body">
+<body class="homeBody">
 	<table align="center" cellpadding="10" cellspacing="20">
 		<tr>
-		<td><a href="company/index.html">Company Home</a></td>
+		<td class="tdLink"><a href="company/index.html">Company Home</a></td>
 		</tr>
 		<tr>
-		<td><a href="adminer/adminer.php">Adminer</a></td>
+		<td class="tdLink"><a href="adminer/adminer.php">Adminer</a></td>
 		</tr>
 		<tr>
-		<td><a href="https://github.com/zed2808/zachstevens.us">GitHub</a></td>
+		<td class="tdLink"><a href="https://github.com/zed2808/zachstevens.us">GitHub</a></td>
 		</tr>
 	</table>
 </body>
