--- a/html/index.html
+++ b/html/index.html
@@ -7,16 +7,16 @@
 <body class="homeBody">
 	<table align="center" cellpadding="10" cellspacing="20">
 		<tr>
-		<td class="tdLink"><a href="company/index.html">Company Home</a></td>
-		</tr>
-		<tr>
-		<td class="tdLink"><a href="adminer/adminer.php">Adminer</a></td>
+		<td class="tdLink"><a href="company/index.html">Mock Company Home</a></td>
 		</tr>
 		<tr>
 		<td class="tdLink"><a href="https://github.com/zed2808/zachstevens.us">GitHub</a></td>
 		</tr>
 		<tr>
 		<td class="tdLink"><a href="bowlerroller">Bowler Roller</a></td>
+		</tr>
+		<tr>
+		<td class="tdLink"><a href="http://pokemongo.zachstevens.us">Pokemon Go Map</a></td>
 		</tr>
 	</table>
 </body>
