Company links to domain instead of directory

--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 <body class="homeBody">
 	<table align="center" cellpadding="10" cellspacing="20">
 		<tr>
-		<td class="tdLink"><a href="company/index.html">Mock Company Home</a></td>
+		<td class="tdLink"><a href="http://company.zachstevens.us">Mock Company Home</a></td>
 		</tr>
 		<tr>
 		<td class="tdLink"><a href="https://github.com/zed2808/zachstevens.us">GitHub</a></td>
